--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -11991,12 +11991,17 @@ body {
   width: 233px;
 }
 
+@media (max-width: 992px) {
+  .logo-fundacion img {
+    width: 80%;
+  }
+}
 .social-links, .btn.btn-link {
   color: #9fbeea;
   text-decoration: none;
 }
 .social-links svg, .btn.btn-link svg {
-  width: 20px;
+  width: 15px;
   height: auto;
   fill: #9fbeea;
   margin-right: 10px;
