--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -30,12 +30,19 @@ body {
         width: 233px;
     }
 }
+@media (max-width: 992px) {
+    .logo-fundacion {
+        img {
+            width: 80%;
+        }
+    }
+}
 
 .social-links, .btn.btn-link {
     color: $color-institucional-secundario;
     text-decoration: none;
     svg {
-        width: 20px;
+        width: 15px;
         height: auto;
         fill: $color-institucional-secundario;
         margin-right: 10px;
