--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -11991,11 +11991,6 @@ body {
   width: 233px;
 }
 
-@media (max-width: 992px) {
-  .logo-fundacion img {
-    width: 80%;
-  }
-}
 .social-links, .btn.btn-link {
   color: #9fbeea;
   text-decoration: none;
@@ -12010,6 +12005,16 @@ body {
   text-decoration: underline;
 }
 
+@media (max-width: 992px) {
+  .logo-fundacion img {
+    width: 80%;
+  }
+}
+@media (max-width: 480px) {
+  .social-links svg, .btn.btn-link svg {
+    margin-right: 0;
+  }
+}
 header, footer {
   background-color: #324160;
   color: #fff;
