--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -2,14 +2,14 @@
 @import '../bootstrap-5.3.7/scss/bootstrap.scss';
 
 // fuentes
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 // variables institucionales
 
-$color-institucional-base: #324160;
+$color-institucional-base: #03397F;
 $color-institucional-secundario: #9fbeea;
 $color-institucional-terciario: #213050;
-$fuente-base: "Open Sans", sans-serif;
+$fuente-base: "Montserrat", sans-serif;
 
 // generales
 
@@ -72,4 +72,7 @@ header, footer {
             width: 100%;
         }
     }
+}
+main {
+    color: #03397F;
 }
