--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -59,7 +59,7 @@ body {
 }
 
 header, footer {
-    background-color: $color-institucional-base;
+    //background-color: $color-institucional-base;
     color: $white;
     a {
         color: $color-institucional-secundario;
@@ -75,4 +75,20 @@ header, footer {
 }
 main {
     color: #03397F;
+}
+footer {
+    background-color: $color-institucional-base;
+}
+.titulo-colecta {
+    font-size: 96px;
+    line-height: 85px;
+    border-right: 3px solid $white;
+    padding-right: 2rem;
+    margin-right: 2rem;
+}
+.fondo-azul-superior {
+    background-image: url('../img/trazado-azul.svg');
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: 2000px;
 }
