--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -75,6 +75,7 @@ header, footer {
 }
 main {
     color: #03397F;
+    font-size: 20px;
 }
 footer {
     background-color: $color-institucional-base;
@@ -96,4 +97,23 @@ footer {
     background-position: top center;
     background-repeat: no-repeat;
     background-size: 2000px;
+}
+.listado-fundacion {
+    padding: 0;
+    li {
+        list-style-type: none;
+        margin-bottom: 1.5rem;
+        position: relative;
+        padding-left: 40px;
+        &::before {
+            content: '';
+            position: absolute;
+            background-image: url('../img/punto-lista.svg');
+            height: 20px;
+            width: 20px;
+            left: 0;
+            top: 10px;
+            background-size: contain;
+        }
+    }
 }
