--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -12081,4 +12081,14 @@ footer {
 .bg-fucsia {
   color: #fff;
   background-color: #DA0080;
+}
+
+.btn-donacion {
+  text-transform: uppercase;
+  color: #03397F;
+  font-weight: 800;
+  font-size: 41px;
+  background-color: #FFE033;
+  border-color: transparent;
+  box-shadow: 3px 3px 9px #08555C;
 }/*# sourceMappingURL=estilos.css.map */
