--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -121,3 +121,12 @@ footer {
     color: $white;
     background-color: #DA0080;
 }
+.btn-donacion {
+    text-transform: uppercase;
+    color: $color-institucional-base;
+    font-weight: 800;
+    font-size: 41px;
+    background-color: #FFE033;
+    border-color: transparent;
+    box-shadow: 3px 3px 9px #08555C;
+}
