--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -129,4 +129,8 @@ footer {
     background-color: #FFE033;
     border-color: transparent;
     box-shadow: 3px 3px 9px #08555C;
+    cursor: url('../img/cursor.svg'), auto;
+    &:hover {
+        background-color: $color-institucional-base;
+    }
 }
