--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -12053,7 +12053,7 @@ footer {
 
 .fondo-azul-superior {
   background-image: url("../img/trazado-azul.svg");
-  background-position: top center;
+  background-position: top left;
   background-repeat: no-repeat;
   background-size: 2000px;
 }
@@ -12095,4 +12095,30 @@ footer {
 }
 .btn-donacion:hover {
   background-color: #03397F;
+}
+
+.alvaro-josefa {
+  width: 805px;
+  height: 898px;
+  position: relative;
+}
+
+.josefa {
+  position: absolute;
+  right: 100px;
+  top: 285px;
+}
+
+.sonrisa {
+  position: absolute;
+  color: #fff;
+  font-size: 27px;
+  width: 217px;
+  letter-spacing: 0.25rem;
+  right: 200px;
+  top: 0;
+}
+
+.dona-span {
+  font-size: 17px;
 }/*# sourceMappingURL=estilos.css.map */
