--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -12060,6 +12060,7 @@ footer {
 
 .listado-fundacion {
   padding: 0;
+  max-width: 780px;
 }
 .listado-fundacion li {
   list-style-type: none;
@@ -12081,6 +12082,8 @@ footer {
 .bg-fucsia {
   color: #fff;
   background-color: #DA0080;
+  position: relative;
+  z-index: -2;
 }
 
 .btn-donacion {
@@ -12116,7 +12119,7 @@ footer {
   width: 217px;
   letter-spacing: 0.25rem;
   right: 200px;
-  top: -30px;
+  top: 0;
 }
 .sonrisa::before {
   content: "";
@@ -12165,11 +12168,11 @@ footer {
 
 .bg-celeste {
   background-image: url("../img/trazado-celeste.svg");
-  background-size: 1159px;
+  background-size: 1280px;
   background-position: bottom right;
   background-repeat: no-repeat;
   position: absolute;
-  right: 0;
+  right: -100px;
   bottom: 0;
   top: 0;
   left: 0;
@@ -12188,4 +12191,9 @@ footer {
   top: 0;
   left: 0;
   z-index: -2;
+}
+
+.donaciones {
+  margin-top: 5rem;
+  color: #fff;
 }/*# sourceMappingURL=estilos.css.map */
