--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -100,7 +100,7 @@ footer {
 }
 .listado-fundacion {
     padding: 0;
-    max-width: 780px;
+    max-width: 750px;
     li {
         list-style-type: none;
         margin-bottom: 1.5rem;
@@ -154,7 +154,7 @@ footer {
     width: 217px;
     letter-spacing: 0.25rem;
     right: 200px;
-    top: 0;
+    top: 30px;
     &::before {
         content: '';
         position: absolute;
