--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -169,7 +169,7 @@ footer {
 .dona-span {
     font-size: 17px;
 }
-.musica, .flor-sonrisa, .llave-de-sol {
+.musica, .flor-sonrisa, .llave-de-sol, .abeja, .flor-fucsia {
     position: absolute;
     background-size: contain;
     background-repeat: no-repeat;
@@ -193,6 +193,20 @@ footer {
     height: 119px;
     background-image: url('../img/nota-musical.svg');
     bottom: 250px;
+    right: -30px;
+}
+.abeja {
+    width: 193px;
+    height: 76px;
+    background-image: url('../img/abeja.svg');
+    top: 100px;
+    right: -30px;
+}
+.flor-fucsia {
+    width: 93px;
+    height: 164px;
+    background-image: url('../img/flor.svg');
+    bottom: 220px;
     right: -30px;
 }
 .bg-celeste{
