--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -43,20 +43,6 @@ body {
         text-decoration: underline;
     }
 }
-@media (max-width: 992px) {
-    .logo-fundacion {
-        img {
-            width: 80%;
-        }
-    }
-}
-@media (max-width: 480px) {
-    .social-links, .btn.btn-link {
-        svg {
-            margin-right: 0;
-        }
-    }
-}
 
 header, footer {
     //background-color: $color-institucional-base;
@@ -286,6 +272,39 @@ footer {
     }
 }
 @media screen and (min-width: 1681px) {
+    .esconder-grande {
+        display: none;
+    }
+}
+@media (max-width: 992px) {
+    .logo-fundacion {
+        img {
+            width: 80%;
+        }
+    }
+}
+@media (max-width: 480px) {
+    .social-links, .btn.btn-link {
+        svg {
+            margin-right: 0;
+        }
+    }
+}
+@media (max-width: 1200px) {
+    .titulo-colecta {
+        border-right: none;
+        padding-right: 0;
+        margin-right: 0;
+    }
+    .fondo-azul-superior {
+        background-position: top left; //top left;
+        background-repeat: no-repeat;
+        background-size: 2000px;
+    }
+    .donaciones {
+        background-color: #019CDE;
+        margin-top: 0;
+    }
     .esconder-grande {
         display: none;
     }
