--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -12186,6 +12186,19 @@ footer {
   z-index: -1;
 }
 
+.bg-celeste-movil {
+  background-image: url("../img/trazado-celeste-movil.svg");
+  background-size: 1250px;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .bg-rosado {
   background-image: url("../img/trazado-fucsia.svg");
   background-size: 1537px;
@@ -12319,6 +12332,9 @@ footer {
   .sonrisa {
     color: #03397F;
     top: 80px;
+    right: 180px;
+    width: 235px;
+    font-size: 30px;
   }
   .flor-sonrisa {
     top: 50px;
@@ -12342,7 +12358,7 @@ footer {
     background-size: 2000px;
   }
   .dona-span {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
   }
 }
 @media (max-width: 900px) {
