--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -383,9 +383,17 @@ footer {
     .dona-span {
         font-size: 1.15rem;
     }
+    .bg-rosado {
+        background-size: 1200px;
+        background-position-x: center;
+        right: 0;
+    }
 }
 @media (max-width: 900px) {
     .flor-fucsia, .abeja {
         display: none;
+    }
+    .logo-fundacion img {
+        width: 250px;
     }
 }
