--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -289,13 +289,6 @@ footer {
         display: none;
     }
 }
-@media (max-width: 992px) {
-    .logo-fundacion {
-        img {
-            width: 80%;
-        }
-    }
-}
 @media (max-width: 480px) {
     .social-links, .btn.btn-link {
         svg {
@@ -304,23 +297,6 @@ footer {
     }
 }
 @media (max-width: 1200px) {
-    .titulo-colecta {
-        border-right: none;
-        padding-right: 0;
-        margin-right: 0;
-        position: relative;
-        &::before {
-            content: '';
-            width: 85px;
-            height: 3px;
-            background-color: $white;
-            position: absolute;
-            top: -30px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-        }
-    }
     .listado-fundacion {
         max-width: 1000px;
     }
@@ -343,14 +319,11 @@ footer {
     footer {
         height: auto;
     }
-    .logo-fundacion img {
-        width: 329px;
-        margin-bottom: 60px;
-    }
+    
     .titulo-colecta {
         font-size: 85px;
-        line-height: 100%;
-        margin-bottom: 2rem !important;
+        /* line-height: 100%;
+        margin-bottom: 2rem !important; */
     }
     .sonrisa {
         color: $color-institucional-base;
@@ -395,5 +368,26 @@ footer {
     }
     .logo-fundacion img {
         width: 250px;
+    }
+    .titulo-colecta {
+        border-right: none;
+        padding-right: 0;
+        margin-right: 0;
+        position: relative;
+        &::before {
+            content: '';
+            width: 85px;
+            height: 3px;
+            background-color: $white;
+            position: absolute;
+            top: -30px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+        }
+    }
+    .logo-fundacion img {
+        width: 329px;
+        margin-bottom: 60px;
     }
 }
