--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -12299,7 +12299,7 @@ footer {
     height: auto;
   }
   .titulo-colecta {
-    font-size: 85px;
+    font-size: 83px;
     /* line-height: 100%;
     margin-bottom: 2rem !important; */
   }
@@ -12340,18 +12340,17 @@ footer {
     right: 0;
   }
 }
-@media (max-width: 900px) {
-  .flor-fucsia, .abeja {
-    display: none;
-  }
+@media (max-width: 992px) {
   .logo-fundacion img {
     width: 250px;
+    margin-bottom: 60px;
   }
   .titulo-colecta {
     border-right: none;
     padding-right: 0;
     margin-right: 0;
     position: relative;
+    margin-bottom: 20px !important;
   }
   .titulo-colecta::before {
     content: "";
@@ -12364,8 +12363,111 @@ footer {
     right: 0;
     margin: 0 auto;
   }
+}
+@media (max-width: 900px) {
+  .flor-fucsia, .abeja {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  .alvaro-josefa {
+    width: 600px;
+    height: 670px;
+  }
+  .alvaro-josefa img {
+    width: 100%;
+  }
+  .sonrisa {
+    top: 45px;
+    right: 65px;
+    width: 220px;
+    font-size: 26px;
+  }
+  .josefa {
+    left: 200px;
+    top: 285px;
+    color: #fff;
+    right: auto;
+  }
+  .titulo-colecta {
+    font-size: 65px;
+    line-height: 100%;
+  }
+  .titulo-colecta::before {
+    content: "";
+    top: -15px;
+  }
   .logo-fundacion img {
-    width: 329px;
-    margin-bottom: 60px;
+    width: 200px;
+    margin-bottom: 40px;
+  }
+  .musica {
+    width: 50px;
+  }
+  .flor-sonrisa {
+    top: 10px;
+  }
+}
+@media (max-width: 576px) {
+  .titulo-colecta {
+    font-size: 30px;
+  }
+  .titulo-colecta::before {
+    top: -21px;
+  }
+  .alvaro-josefa {
+    width: 395px;
+    height: 445px;
+  }
+  .alvaro-josefa img {
+    margin-left: -30px;
+  }
+  .flor-sonrisa, .musica {
+    display: none;
+  }
+  .sonrisa {
+    top: 45px;
+    right: 65px;
+    width: 170px;
+    font-size: 18px;
+  }
+  .sonrisa::before {
+    width: 145px;
+    bottom: -30px;
+  }
+  .josefa {
+    left: 40px;
+    top: 200px;
+  }
+  .llave-de-sol {
+    right: -15px;
+    left: auto;
+  }
+  .dona-span {
+    font-size: 1rem;
+  }
+  .btn-donacion {
+    font-size: 25px;
+  }
+  h4, .h4, h3, .h3 {
+    font-size: 1.25rem;
+  }
+  .listado-fundacion {
+    font-size: 16px;
+    padding: 2rem !important;
+    margin-bottom: 0 !important;
+  }
+  .listado-fundacion li {
+    padding-left: 30px;
+  }
+  .listado-fundacion li::before {
+    width: 12px;
+    height: 12px;
+  }
+  .bajada-footer {
+    font-size: 16px;
+  }
+  .list-inline-item:not(:last-child) {
+    margin-right: 1.5rem;
   }
 }/*# sourceMappingURL=estilos.css.map */
