--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -497,3 +497,8 @@ footer {
         margin-right: 1.5rem;
     }
 }
+@media (max-width: 425px) {
+    .esconder-grande {
+        display: block;
+    }
+}
