--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -277,7 +277,7 @@ footer {
         left: -250px;
     }
     .bg-celeste {
-        right: -300px;
+        right: -360px;
         bottom: -100px;
     }
     .flor-fucsia {
@@ -389,6 +389,10 @@ footer {
             margin: 0 auto;
         }
     }
+    /* .bg-celeste {
+        right: -400px;
+        bottom: -92px;
+    } */
 }
 @media (max-width: 900px) {
     .flor-fucsia, .abeja {
