--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -237,7 +237,17 @@ footer {
     margin-top: 2rem;
     color: $white;
 }
-@media (min-width: 1200px) and (max-width: 1680px){
+// Responsive
+
+// PANTALLA GRANDE
+@media screen and (min-width: 1681px) {
+    .esconder-grande {
+        display: none;
+    }
+}
+
+// ESCRITORIOS MEDIANOS
+@media (min-width: 1367px) and (max-width: 1680px){
     .dona-span {
         font-size: 16px;
     }
@@ -288,19 +298,90 @@ footer {
         margin-top: 0;
     }
 }
-@media screen and (min-width: 1681px) {
-    .esconder-grande {
-        display: none;
+@media (min-width: 1201px) and (max-width: 1366.9px) {
+    .fondo-azul-superior {
+        background-image: none;
     }
-}
-@media (max-width: 480px) {
-    .social-links, .btn.btn-link {
-        svg {
-            margin-right: 0;
+    header {
+        background-color: $color-institucional-base;
+        padding-bottom: 10px;
+    }
+    .pt-4 {
+        padding-top: 1rem !important;
+    }
+    .titulo-colecta {
+        font-size: 85px;
+    }
+    .logo-fundacion img {
+        width: 210px;
+    }
+    .listado-fundacion {
+        padding-top: 0 !important;
+        margin-top: 0 !important;
+        font-size: 16px;
+        max-width: 600px;
+        margin-bottom: 0 !important;
+    }
+    .sonrisa {
+        color: $color-institucional-base;
+        right: 130px;
+        top: 45px;
+    }
+    .bg-fucsia {
+        font-size: 21px;
+    }
+    .alvaro-josefa {
+        width: 695px;
+        margin-left: -100px !important;
+        height: 750px;
+        img {
+            width: 100%;
         }
     }
+    .abeja {
+        display: none;
+    }
+    .btn-donacion {
+        font-size: 25px;
+    }
+    .donaciones {
+        margin-top: 1rem;
+        padding-top: 1.25rem !important;
+    }
+    .bg-celeste {
+        bottom: -1px;
+        right: -500px;
+    }
+    .bg-rosado {
+        left: -300px;
+    }
+    .dona-span {
+        font-size: 12px;
+        margin-bottom: .5rem !important;
+        .esconder-grande {
+            //display: none;
+        }
+    }
+    .pt-xl-5 {
+        padding-top: 2rem !important;
+    }
+    h4, .h4 {
+        font-size: 1rem;
+    }
+    .musica {
+        top: 100px;
+        width: 50px;
+    }
+    .llave-de-sol {
+        bottom: 65px;
+        right: -18px;
+    }
+    .josefa {
+        right: 80px;
+        top: 250px;
+    }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1200.9px) {
     .listado-fundacion {
         max-width: 1000px;
     }
@@ -366,6 +447,8 @@ footer {
         right: 0;
     }
 }
+
+// TABLET
 @media (max-width: 992px) {
     .logo-fundacion img {
         width: 250px;
@@ -399,6 +482,8 @@ footer {
         display: none;
     }
 }
+
+// PANTALLA MÓVIL
 @media (max-width: 767px) {
     .alvaro-josefa {
         width: 600px;
@@ -499,6 +584,13 @@ footer {
     }
     .list-inline-item:not(:last-child) {
         margin-right: 1.5rem;
+    }
+}
+@media (max-width: 480px) {
+    .social-links, .btn.btn-link {
+        svg {
+            margin-right: 0;
+        }
     }
 }
 @media (max-width: 425px) {
