--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -318,7 +318,7 @@ footer {
     .listado-fundacion {
         padding-top: 0 !important;
         margin-top: 0 !important;
-        font-size: 16px;
+        font-size: 15px;
         max-width: 600px;
         margin-bottom: 0 !important;
     }
@@ -349,8 +349,9 @@ footer {
         padding-top: 1.25rem !important;
     }
     .bg-celeste {
-        bottom: -1px;
-        right: -500px;
+        bottom: -10px;
+        right: -600px;
+        background-size: 1490px;
     }
     .bg-rosado {
         left: -300px;
