--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -12355,6 +12355,9 @@ footer {
     top: 220px;
     font-size: 16px;
   }
+  .bajada-footer {
+    font-size: 18px;
+  }
 }
 @media (max-width: 1199.9px) {
   .listado-fundacion {
