--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -382,6 +382,9 @@ footer {
         top: 220px;
         font-size: 16px;
     }
+    .bajada-footer {
+        font-size: 18px;
+    }
 }
 @media (max-width: 1199.9px) {
     .listado-fundacion {
