--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -87,7 +87,7 @@ footer {
 }
 .listado-fundacion {
     padding: 0;
-    max-width: 750px;
+    max-width: 720px;
     li {
         list-style-type: none;
         margin-bottom: 1.5rem;
@@ -100,7 +100,7 @@ footer {
             height: 20px;
             width: 20px;
             left: 0;
-            top: 10px;
+            top: 5px;
             background-size: contain;
         }
     }
@@ -321,6 +321,14 @@ footer {
         font-size: 15px;
         max-width: 600px;
         margin-bottom: 0 !important;
+        li {
+            padding-left: 35px;
+        }
+        li::before {
+            width: 15px;
+            height: 15px;
+            top: 3px;
+        }
     }
     .sonrisa {
         color: $color-institucional-base;
